数据库重要更新 请重新导入数据库文件

--- a/WebRoot/style/style.css
+++ b/WebRoot/style/style.css
@@ -266,5 +266,11 @@ caption p {
 }
 
 #navigator li{
-	 display:inline;
+	display:inline;
+}
+
+#photoDiv {
+	position: absolute;
+	left : 500px;
+	top : 135px;
 }
