--- a/WebRoot/style/personalPagePanelStyle.css
+++ b/WebRoot/style/personalPagePanelStyle.css
@@ -8,29 +8,6 @@
 	clear: both;
 }
 
-#recent_reply {
-	list-style: none;
-	position: relative;
-	margin: 10px 10px 10px 10px;
-	float: left;
-	clear: both;
-	border: dashed thin;
-	background-image: url(image/content_bg.png);
-	width: 658px;
-}
-
-#recent_reply ul li {
-	margin: 4px 5px 4px 5px;
-	text-align: left;
-	font-size: 14px;
-	color: #54A7E3;
-}
-
-#recent_reply ul li a {
-	color: #0F0;
-	font-weight: 700
-}
-
 #content_list {
 	margin: 0px;
 	padding: 0px;
@@ -87,56 +64,6 @@
 	color: #33F;
 }
 
-#content_list .content_item .friend_item {
-	display: block;
-	width: 551;
-	margin: 0px;
-	padding: 7px;
-	border-radius: 5px 5px 5px 5px;
-	background-color: #CAD1DC;
-	float: right;
-	clear: right;
-	text-align: left;
-}
-
-#content_list .content_item .addfriend_editor {
-	width: 55px;
-	height: 90px;
-	float: left;
-	margin: 0px;
-	padding: 0px;
-	list-style: none;
-}
-
-#content_list .content_item .addfriend_editor a {
-	text-align: center;
-	margin: 0px;
-	color: #54A7E3;
-}
-
-#content_list .content_item .friend_photo {
-	width: 107;
-	height: 106;
-	margin: 0px;
-	background-image: url(image/photo_bg.png);
-	float: left;
-}
-
-#content_list .content_item .friend_photo img {
-	width: 107;
-	height: 106;
-	margin: 0px;
-}
-
-#content_list .content_item .friend_detail {
-	width: 420;
-	height: 90;
-	margin: 0px 0px 0px 7px;
-	padding: 7px;
-	float: left;
-	border: thin dashed;
-}
-
 #content_list .content_item .message_item {
 	display: block;
 	width: 560px;
@@ -150,7 +77,7 @@
 
 #content_list .content_item .replayMessage_editor {
 	width: 63px;
-	height: 108px;
+	height: 90px;
 	float: left;
 	margin: 0px;
 	padding: 0px;
@@ -212,22 +139,24 @@
 	float: right;
 }
 
-/*=============xurunhua==========*/
-
-#systemMessageBox{
-	text-align: left;
+#latest_blogs {
+	float: left;
+	color: white;
 }
 
-#statementDiv {
-	text-align: left;
-	padding: 0px 0px 0px 7px;
+#all_blogs {
+	float: right;
+	color: white;
 }
 
-.replyDiv {
-	text-align: left;
-	
+textarea {
+	float: left;
+}
+#gossip_remain {
+	float: left;
 }
 
-.message_detail_replay {
-	padding: 0px 0px 0px 7px;
+/*===============xurunhua===================*/
+#global_toolbox {
+	text-align: center;
 }
