--- a/WebRoot/style/personalPagePanelStyle.css
+++ b/WebRoot/style/personalPagePanelStyle.css
@@ -6,6 +6,7 @@
 	background-image: url(image/content_bg.png);
 	float: left;
 	clear: both;
+	width : 650px;
 }
 
 #content_list {
@@ -13,6 +14,7 @@
 	padding: 0px;
 	float: left;
 	clear: both;
+	width : 650px;
 }
 
 #content_list .content_item {
